--- a/src/components/hourly/Hourly.scss
+++ b/src/components/hourly/Hourly.scss
@@ -9,7 +9,6 @@ $color2: #1068f3;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        
         padding: 2rem;
     }
     &__title p{
@@ -18,19 +17,20 @@ $color2: #1068f3;
     }
     &__content{
         &-scroll{
+            position: relative;
             overflow: scroll;
-            scroll-behavior: smooth;
-            overflow-x: hidden;
             overflow-y: hidden;
+            scroll-behavior: smooth;
             padding: 1rem .5rem;
             border-radius: 5px;
             border: 1px solid #e2e2e270;
+            text-align: center;
         }
         &-grid{
             display: flex;
             align-items: center;
             justify-content: space-between;
-            width: 200rem;
+            width: 300rem;
         }
         &-item{
             width: 12rem;
@@ -45,6 +45,9 @@ $color2: #1068f3;
         }
         &-time,&-temp,&-rain{
             font-size: 2rem;
+        }
+        &-image{
+            height: 4rem;
         }
         &-time{
             margin-bottom: 1rem;
