--- a/src/components/hourly/Hourly.scss
+++ b/src/components/hourly/Hourly.scss
@@ -9,7 +9,7 @@ $color2: #1068f3;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 2rem;
+        padding: 2rem 0;
     }
     &__title p{
         color: white;
