--- a/src/components/hourly/Hourly.scss
+++ b/src/components/hourly/Hourly.scss
@@ -11,9 +11,9 @@ $color2: #1068f3;
         justify-content: center;
         padding: 2rem 0;
     }
-    &__title p{
+    &__title{
         color: white;
-        margin-bottom: 1rem;
+        margin-bottom: 3rem;
     }
     &__content{
         &-scroll{
@@ -21,9 +21,9 @@ $color2: #1068f3;
             overflow: scroll;
             overflow-y: hidden;
             scroll-behavior: smooth;
-            padding: 1rem .5rem;
-            border-radius: 5px;
-            border: 1px solid #e2e2e270;
+            padding: 2rem;
+            border-radius: .5rem;
+            background-color: rgba(255, 255, 255, .1);
             text-align: center;
         }
         &-grid{
@@ -39,7 +39,7 @@ $color2: #1068f3;
             align-items: center;
             justify-content: space-around;
             padding: 2rem;
-            border-radius: .5rem;
+            border-radius: 1rem;
             color: white;
             background-color: rgba($color: #000000, $alpha: .15);
         }
