--- a/src/base.scss
+++ b/src/base.scss
@@ -13,3 +13,10 @@ body {
     font-size: 1.5rem;
     font-family: vazir;
 }
+input, button {
+    font-family: inherit;
+}
+a{
+    text-decoration: none;
+    color: #1068f3;
+}
