--- a/src/components/hourly/Hourly.scss
+++ b/src/components/hourly/Hourly.scss
@@ -48,6 +48,7 @@ $color2: #1068f3;
         }
         &-image{
             height: 4rem;
+            width: 4rem;
         }
         &-time{
             margin-bottom: 1rem;
