--- a/src/pages/form.scss
+++ b/src/pages/form.scss
@@ -35,8 +35,8 @@
         width: 45rem;
         padding: 2rem;
         margin-top: 10rem;
-        border-radius: .5rem .5rem 0 0;
-        background-color: rgba(255, 255, 255, .4);
+        border-radius: .5rem;
+        background-color: rgba(0, 0, 0, 0.15);
     }
     &-inputs{
         position: relative;
@@ -86,8 +86,9 @@
             justify-content: space-evenly;
             width: 100%;
             padding: 2rem;
-            border-radius:0 0 .5rem .5rem;
-            background-color: rgba(255, 255, 255, .4);
+            margin-top: 2rem;
+            border-radius: .5rem ;
+            background-color: rgba(0, 0, 0, 0.15);
         }
         &-item {
             display: flex;
