--- a/src/base.scss
+++ b/src/base.scss
@@ -20,3 +20,9 @@ a{
     text-decoration: none;
     color: #1068f3;
 }
+// helper
+
+.align-items-center{
+    display: flex;
+    align-items: center;
+}
