--- a/src/components/hourly/Hourly.scss
+++ b/src/components/hourly/Hourly.scss
@@ -9,7 +9,6 @@ $color2: #1068f3;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 2rem 0;
     }
     &__title{
         color: white;
@@ -49,10 +48,38 @@ $color2: #1068f3;
         &-image{
             height: 4rem;
             width: 4rem;
+            margin-bottom: .5rem;
         }
         &-time{
             margin-bottom: 1rem;
         }
 
+    }
+}
+@media only screen and (max-width: 768px) {
+    .hourly{
+        &__content{
+            &-scroll{
+                padding: 1rem;
+            }
+            &-grid{
+                width: 200rem;
+            }
+            &-item{
+                width: 8rem;
+                padding: 1rem;
+            }
+            &-time,&-temp,&-rain{
+                font-size: 1.2rem;
+            }
+            &-image{
+                height: 2rem;
+                width: 2rem;
+                margin-bottom: .2rem;
+            }
+            &-time{
+                margin-bottom: .3rem;
+            }
+        }
     }
 }
