--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -1,8 +1,8 @@
 .main{
     &-header{
         position: static;
-        width: fit-content;
-        height: fit-content;
+        width: 100%;
+        height: 53rem;
     }
     &-content{
         position: relative;
