--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -9,7 +9,7 @@
     overflow: hidden;
     
     &:hover &__text{
-        width: 50px;
+        width: 6rem;
         visibility: visible;
         margin-right: 1rem;
         opacity: 1;
