--- a/src/pages/form.scss
+++ b/src/pages/form.scss
@@ -3,19 +3,9 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    background: url(../assets/images/png/background.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    &::before{
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba($color: #000000, $alpha: .4);
-    }
+    background: linear-gradient(to bottom right,#14bcf8,#1068f3,#14bcf8,#1068f3);
+    background-size: 400% 400%;
+    animation: loading 15s ease-in infinite;
     &-container{
         position: relative;
         display: flex;
@@ -71,6 +61,7 @@
             padding: .5rem 1rem;
             background-color: #14bcf8;
             border: 1px solid #fff;
+            border-radius: .5rem;
             color: #fff;
         }
     }
