--- a/src/base.scss
+++ b/src/base.scss
@@ -8,10 +8,10 @@ $color2: #1068f3;
 }
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 body {
     font-size: 1.5rem;
-    font-family: vazir;
 }
 input, button {
     font-family: inherit;
