--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -25,6 +25,10 @@
         &-location{
             font-size: 3rem;
             animation: text-anime 1s 1 ;
+            margin-bottom: 1rem;
+        }
+        &-loc-name{
+            margin-left: 1rem;
         }
         &-date{
             font-size: 2rem;
