--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -1,11 +1,11 @@
 .main{
-    &-header{
-        position: static;
-        width: 100%;
-        height: 53rem;
-    }
-    &-content{
-        position: relative;
-        z-index: 50;
-    }
+    background: linear-gradient(to top left,#14bcf8,#1068f3);
+}
+.loading{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
