--- a/src/pages/form.scss
+++ b/src/pages/form.scss
@@ -5,7 +5,7 @@
     height: 100%;
     background: linear-gradient(to bottom right,#14bcf8,#1068f3,#14bcf8,#1068f3);
     background-size: 400% 400%;
-    animation: loading 15s ease-in infinite;
+    //animation: loading 15s ease-in infinite;
     &-container{
         position: relative;
         display: flex;
@@ -105,24 +105,21 @@
     }
     &-loading{
         width: 100%;
-        height: 2.4rem;
+        height: 3.4rem;
         margin-bottom: 1rem;
         border-radius: .5rem;
-        background: linear-gradient(to  left,rgb(255, 255, 255),#adadad,rgb(255, 255, 255),#adadad );
-        background-size: 400% 400%;
-        animation: loading 2s ease-in infinite;
+        background: linear-gradient(90deg, rgba(255,255,255,.8) 0%, rgba(255,255,255,.8) 45%, rgba(225,225,223,.7) 50%, rgba(255,255,255,.8) 55%, rgba(255,255,255,.8) 100%);
+        background-size: 200% 200%;
+        animation: loading 2s ease infinite;
     }
 
 }
 
 @keyframes loading {
     0%{
-        background-position: 0% 50%;
-    }
-    50%{
-        background-position: 100% 50%;
+        background-position: 0% 100%;
     }
     100%{
-        background-position: 0% 50%;
+        background-position: 150% 100%;
     }
 }
