--- a/src/base.scss
+++ b/src/base.scss
@@ -1,6 +1,12 @@
 $color:#14bcf8;
 $color2: #1068f3;
-
+:root{
+    --blue1: #e8f3f9;
+    --blue2: #afe1f2;
+    --blue3: #34a0c6;
+    --blue4: #11687f;
+    --blue5: #032635;
+}
 *, ::after,::before{
     margin: 0;
     padding: 0;
