--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -1,5 +1,5 @@
 .main{
-    background: linear-gradient(to top left,#14bcf8,#1068f3);
+    background: var(--blue1);
 }
 .loading{
     position: absolute;
