--- a/src/components/daily/Daily.scss
+++ b/src/components/daily/Daily.scss
@@ -10,18 +10,18 @@
         flex-direction: column;
         justify-content: space-between;
         border-radius: .5rem;
-        padding: 2rem;
-        background-color: rgba(255, 255, 255, .1);
+        padding: 1rem;
+        background-color: #fff;
     }
     &-item{
         display: flex;
         justify-content: space-between;
         padding: 1rem;
         border-radius: 1rem;
-        background-color: rgba(0, 0, 0, 0.15);
-        color: #fff;
+        //background-color: rgba(0, 0, 0, 0.15);
+        color: var(--blue5);
         &:not(:last-child){
-            margin-bottom: 1.5rem;
+            border-bottom: 1px solid var(--blue1);
         }
         &-time{
             width: 10rem;
