--- a/src/components/hourly/Hourly.scss
+++ b/src/components/hourly/Hourly.scss
@@ -7,9 +7,9 @@
         overflow: scroll;
         overflow-y: hidden;
         scroll-behavior: smooth;
-        padding: 2rem;
+        padding: 1rem;
         border-radius: .5rem;
-        background-color: rgba(255, 255, 255, .1);
+        background-color: #fff;
         text-align: center;
     }
     &-grid{
@@ -19,20 +19,22 @@
         width: fit-content;
     }
     &-item{
-        width: 12rem;
+        width: 8rem;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
-        padding: 2rem 4rem;
+        padding: 1rem;
         border-radius: 1rem;
-        color: white;
-        background-color: rgba($color: #000000, $alpha: .15);
+        color: var(--blue5);
         &:not(:last-child){
             margin-left: 1.5rem;
         }
         &-time,&-temp,&-rain{
             font-size: 2rem;
+        }
+        &-time,&-rain{
+            color: var(--blue4);
         }
         &-image{
             height: 4rem;
