--- a/src/components/hourly/Hourly.scss
+++ b/src/components/hourly/Hourly.scss
@@ -31,7 +31,7 @@
             margin-left: 1.5rem;
         }
         &-time,&-temp,&-rain{
-            font-size: 2rem;
+            font-size: 1.8rem;
         }
         &-time,&-rain{
             color: var(--blue4);
@@ -51,17 +51,11 @@
             &-scroll{
                 padding: 1rem;
             }
-            &-grid{
-                width: 200rem;
-            }
             &-item{
-                width: 8rem;
-                padding: 1rem;
+                width: 6rem;
+                padding: 1rem 0;
                 &:not(:last-child){
                     margin-left: 1rem;
-                }
-                &-time,&-temp,&-rain{
-                    font-size: 1.2rem;
                 }
                 &-image{
                     height: 2rem;
