--- a/src/base.scss
+++ b/src/base.scss
@@ -1,6 +1,8 @@
 $color:#14bcf8;
 $color2: #1068f3;
 :root{
+    --light-gray: #f3f3f3;
+    --dark-gray: #c9c9c9;
     --blue1: #e8f3f9;
     --blue2: #afe1f2;
     --blue3: #34a0c6;
