--- a/src/components/daily/Daily.scss
+++ b/src/components/daily/Daily.scss
@@ -54,6 +54,8 @@
                 margin-left: 1rem;
             }
             & span{
+                text-align: left;
+                width: 7rem;
                 height: 2rem;
             }
 
