--- a/src/components/daily/Daily.scss
+++ b/src/components/daily/Daily.scss
@@ -51,7 +51,7 @@
             & img{
                 width: 2rem;
                 height: 2rem;
-                margin-left: 1rem;
+                margin-left: .2rem;
             }
             & span{
                 text-align: left;
